--- a/appgain-sdk/app/src/main/AndroidManifest.xml
+++ b/appgain-sdk/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
-    <permission android:protectionLevel="signature"
-        android:name="com.appgain.sdk.C2D_MESSAGE" />
+    <permission
+        android:protectionLevel="signature"
+        android:name="com.appgain.sdk.C2D_MESSAGE"
+        />
     <uses-permission android:name="com.appgain.sdk.permission.C2D_MESSAGE" />
 
 
@@ -41,9 +43,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- Allows the deep link to be used without specifying the app name -->
                 <category android:name="android.intent.category.DEFAULT" />
-                <!-- URI tutsplus://deeplink -->
-                <!-- URI http://www.mydeeplink.com -->
-                <data android:scheme="firstflight" />
+                <data android:scheme="appgaintest" />
             </intent-filter>
         </activity>
 
@@ -66,19 +66,23 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <category android:name="io.appgain.androidsdk" />
+                <category android:name="com.appgain.sdk" />
 
             </intent-filter>
         </receiver>
+
+
+
+
+        <meta-data
+            android:name="com.parse.push.notification_icon"
+            android:resource="@mipmap/ic_launcher"/>
 
 
         <meta-data
             android:name="com.parse.push.gcm_sender_id"
             android:value="id:497557582388" />
 
-        <meta-data
-            android:name="com.parse.push.notification_icon"
-            android:resource="@mipmap/ic_launcher"/>
 
 
 
