--- a/appgain-sdk/local.properties
+++ b/appgain-sdk/local.properties
@@ -9,3 +9,6 @@
 # header note.
 #Thu Mar 22 14:14:43 EET 2018
 sdk.dir=G\:\\sdk
+bintray.user=appgain
+bintray.apikey=b7988c54880c8e6adcc2e445c5cec891e020f448
+
