--- a/appgain-sdk/com.appgain.io.sdk/build.gradle
+++ b/appgain-sdk/com.appgain.io.sdk/build.gradle
@@ -16,7 +16,45 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
+
 }
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.1.0'
+    }
+}
+
+
+ext {
+    bintrayRepo = 'appgain-alpha' // your repo name
+    bintrayName = 'com.appgain.io.sdk' // has to be same as your library module name
+    publishedGroupId = 'io.appgain.sdk' // your module package name
+    libraryName = 'appgain-alpha'
+    artifact = 'com.appgain.io.sdk' // has to be same as your library module name
+    libraryDescription = 'appgain sdk desc'
+    siteUrl = 'https://github.com/appgain/appgain-SDK-Android'
+    gitUrl = 'https://github.com/appgain/appgain-SDK-Android'
+    libraryVersion = '1.0'
+    developerId = '52143c8aa6d74f2'
+    developerName = 'sotra'
+    developerEmail = 'dev.sotra@gmail.com'
+    licenseName = ' The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+
+
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -32,3 +70,6 @@ dependencies {
     // parse
     compile 'com.parse:parse-android:1.15.8'
 }
+apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/installv.gradle'
+apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/bintrayv.gradle'
+
