--- a/appgain-sdk/sdk/build.gradle
+++ b/appgain-sdk/sdk/build.gradle
@@ -51,7 +51,7 @@ ext {
     libraryDescription = 'appgain sdk desc'
     siteUrl = 'https://github.com/appgain/appgain-SDK-Android'
     gitUrl = 'https://github.com/appgain/appgain-SDK-Android'
-    libraryVersion = '1.0.4'
+    libraryVersion = '1.0.5'
     developerId = '52143c8aa6d74f2'
     developerName = 'sotra'
     developerEmail = 'developers@appgain.io'
@@ -61,18 +61,28 @@ ext {
 }
 
 
-
-
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     // networking lib
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    //bind lib
+    implementation 'com.jakewharton:butterknife:8.8.1'
     // log lib
     implementation 'com.jakewharton.timber:timber:3.1.0'
     // parse
     implementation 'com.parse:parse-android:1.15.8'
+    implementation 'com.android.support:support-v4:26.1.0'
+
+
 }
+
+
 apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/installv.gradle'
 apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/bintrayv.gradle'
+
+// upload
+//gradlew clean build install bintrayUpload
+
