--- a/appgain-sdk/app/build.gradle
+++ b/appgain-sdk/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "io.appgain.demo"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -23,12 +23,14 @@ android {
     }
 
 }
-
+ext {
+    parseVersion = "1.17.3"
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -38,4 +40,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.jakewharton.timber:timber:3.1.0'
     implementation project(':sdk')
+    implementation "com.parse:parse-android:$parseVersion"
+    implementation "com.parse:parse-fcm-android:$parseVersion"
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
