--- a/appgain-sdk/sdk/build.gradle
+++ b/appgain-sdk/sdk/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-
+    compileSdkVersion 27
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -43,48 +42,22 @@ buildscript {
 }
 
 
+
+
 ext {
-    bintrayRepo = 'Appgain' // your repo name
-    bintrayName = 'appgain-anroid-sdk' // has to be same as your library module name
-    artifact = 'sdk' // has to be same as your library module name
-    publishedGroupId = 'io.appgain' // your module package name
-    libraryName = 'Appgain'// your repo name
-    libraryDescription = 'appgain sdk desc'
-    siteUrl = 'https://github.com/appgain/appgain-SDK-Android'
-    gitUrl = 'https://github.com/appgain/appgain-SDK-Android'
-    libraryVersion = '1.0.6'
-    developerId = '52143c8aa6d74f2'
-    developerName = 'sotra'
-    developerEmail = 'developers@appgain.io'
-    licenseName = ' The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
+    parseVersion = "1.17.3"
 }
-
-
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
     // networking lib
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    //bind lib
-    implementation 'com.jakewharton:butterknife:8.8.1'
     // log lib
     implementation 'com.jakewharton.timber:timber:3.1.0'
     // parse
-    compile 'com.parse:parse-android:1.15.8'
-    implementation 'com.android.support:support-v4:26.1.0'
-
+    implementation "com.parse:parse-android:$parseVersion"
+    implementation "com.parse:parse-fcm-android:$parseVersion"
 
 }
-
-
-apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/installv.gradle'
-apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/bintrayv.gradle'
-
-// upload
-//gradlew clean build install bintrayUpload
 
