--- a/appgain-sdk/app/build.gradle
+++ b/appgain-sdk/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,11 +24,21 @@ android {
     }
 
 }
+
+configurations.all {
+    resolutionStrategy {
+        force 'ccom.android.support:appcompat-v7:27.1.1'
+        force 'com.android.support:design:27.1.1'
+        force 'com.android.support:support-v4:27.1.1'
+        force 'com.parse.bolts:bolts-tasks:1.4.0'
+    }
+}
+
+
 ext {
     parseVersion = "1.17.3"
 }
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
@@ -37,12 +48,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.google.firebase:firebase-core:11.8.0'
-    implementation 'com.jakewharton.timber:timber:3.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.github.parse-community:Parse-SDK-Android:1.18.5'
+    implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.18.5'
     implementation project(':sdk')
-    implementation "com.parse:parse-android:$parseVersion"
-    implementation "com.parse:parse-fcm-android:$parseVersion"
+    implementation 'io.appgain:sdk:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-
+    implementation 'com.jakewharton.timber:timber:3.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
+
