--- a/appgain-sdk/app/build.gradle
+++ b/appgain-sdk/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "io.appgain.demo"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -35,16 +35,12 @@ configurations.all {
 }
 
 
-ext {
-    parseVersion = "1.17.3"
-}
 dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -53,11 +49,16 @@ dependencies {
     implementation 'com.github.parse-community:Parse-SDK-Android:1.18.5'
     implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.18.5'
 //    implementation project(':sdk')
-    implementation 'io.appgain:sdk:1.1.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+//    implementation 'io.appgain:sdk:1.1.3.test.0.3'
+    implementation('io.appgain:sdk:1.1.3.test.0.5@aar') {
+        transitive = true;
+    }
+//    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.jakewharton.timber:timber:3.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
 }
 apply plugin: 'com.google.gms.google-services'
 com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
