--- a/appgain-sdk/sdk/build.gradle
+++ b/appgain-sdk/sdk/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     compileOnly 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     compileOnly 'com.squareup.retrofit2:converter-gson:2.3.0'
     compileOnly 'com.jakewharton.timber:timber:3.1.0'
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
