--- a/appgain-sdk/app/build.gradle
+++ b/appgain-sdk/app/build.gradle
@@ -48,11 +48,10 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.github.parse-community:Parse-SDK-Android:1.18.5'
     implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.18.5'
-//    implementation project(':sdk')
-//    implementation 'io.appgain:sdk:1.1.3.test.0.3'
-    implementation('io.appgain:sdk:1.1.3.test.0.5@aar') {
-        transitive = true;
-    }
+    implementation project(':sdk')
+//    implementation('io.appgain:sdk:1.1.3.test.0.5@aar') {
+//        transitive = true;
+//    }
 //    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
