--- a/appgain-sdk/sdk/build.gradle
+++ b/appgain-sdk/sdk/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor  'com.github.bumptech.glide:compiler:4.8.0'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
 }
 
