--- a/appgain-sdk/sdk/build.gradle
+++ b/appgain-sdk/sdk/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.jfrog.bintray'
 android {
     compileSdkVersion 27
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -64,6 +64,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor  'com.github.bumptech.glide:compiler:4.8.0'
+    api 'com.android.installreferrer:installreferrer:1.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.2'
+
+
 }
 
 apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/installv.gradle'
